fix: [core-services] update account account
