# apps/core-service/internal/docs/swagger.json
@@ -542,10 +542,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/api.accountResponse"
-                                            }
+                                            "$ref": "#/definitions/api.accountEntriesViewResponse"
                                         },
                                         "meta": {
                                             "$ref": "#/definitions/api.Meta"
@@ -1096,6 +1093,44 @@
                     "type": "integer"
                 },
                 "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.accountEntriesViewResponse": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "integer"
+                },
+                "account_name": {
+                    "type": "string"
+                },
+                "account_number": {
+                    "type": "string"
+                },
+                "amount": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_main": {
+                    "type": "boolean"
+                },
+                "to_account_id": {
+                    "type": "integer"
+                },
+                "to_account_name": {
+                    "type": "string"
+                },
+                "to_account_number": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "user_id": {
                     "type": "integer"
                 }
             }
